--- a/starter-code/views/index.ejs
+++ b/starter-code/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    <%= title %>
+    Financial data
   </title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
